testdata/baselines/reference/submodule/conformance/asyncArrowFunctionCapturesArguments_es6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Promise'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
asyncArrowFunctionCapturesArguments_es6.ts(4,40): error TS2339: Property 'apply' does not exist on type '() => void'.
asyncArrowFunctionCapturesArguments_es6.ts(9,45): error TS2339: Property 'length' does not exist on type '{}'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Promise'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== asyncArrowFunctionCapturesArguments_es6.ts (2 errors) ====
    class C {
       method() {
          function other() {}
          var fn = async () => await other.apply(this, arguments);
                                           ~~~~~
!!! error TS2339: Property 'apply' does not exist on type '() => void'.
       }
    }
    
    function f() {
       return async () => async () => arguments.length;
                                                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
    }